--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "0.5.6",
-    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/react": "^3.1.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "5.0.2",
-    "astro": "4.4.5",
+    "astro": "^4.5.12",
     "astro-robots-txt": "1.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
